--- a/pages/delivery_order/detail.wxss
+++ b/pages/delivery_order/detail.wxss
@@ -1,185 +1,2 @@
 /* pages/order/detail.wxss */
-.order-status-block {
-  background-color: #C7162B;
-  padding: 20rpx 50rpx;
-  align-items: center;
-  display: flex;
-}
-
-.order-status-block .order-status {
-  color: #ffffff;
-  flex-grow: 1;
-  vertical-align: middle;
-  font-weight: bold;
-}
-
-.order-status-block icon {
-  font-size: 120rpx;
-  color: #a3a3a3;
-}
-
-.consignee-block {
-  background-color: #ffffff;
-  padding: 30rpx;
-  display: flex;
-  align-items: center;
-  color: #a3a3a3;
-}
-
-.consignee-block icon {
-  margin-right: 20rpx;
-}
-
-.consignee-block .consignee-info {
-  flex-grow: 1;
-}
-
-.consignee-block .consignee-info .consignee {
-  display: flex;
-}
-
-.consignee-block .consignee-info .consignee .mobile {
-  flex-grow: 1;
-  text-align: right;
-}
-
-.consignee-block .consignee-info .address {
-  margin-top: 20rpx;
-  display: flex;
-}
-
-.consignee-block .consignee-info .address .label {
-  width: 180rpx;
-}
-
-.consignee-block .consignee-info .address .detail {
-  flex-grow: 1;
-}
-
-.order {
-  margin-top: 20rpx;
-  background-color: #ffffff;
-}
-
-.shop-info {
-  padding: 20rpx 30rpx;
-}
-
-.order-detail {
-  background-color: #fafafa;
-  display: flex;
-  padding: 20rpx 30rpx;
-  border-bottom: 2rpx solid #e5e5e5;
-}
-
-.order-detail:last-child {
-  border-bottom: 0;
-}
-
-.order-detail .detail-img {
-  width: 180rpx;
-  height: 180rpx;
-  margin-right: 20rpx;
-}
-
-.order-detail .detail-info {
-  max-width: 40%;
-}
-
-.order-detail .detail-info text {
-  display: block;
-}
-
-.order-detail .detail-info .detail-attributes {
-  margin-top: 20rpx;
-  color: #a3a3a3;
-}
-
-.order-detail .detail-amount {
-  flex-grow: 1;
-  text-align: right;
-  min-width: 25%;
-}
-
-.order-detail .detail-amount text {
-  display: block;
-}
-
-.order-detail .detail-count {
-  margin-top: 20rpx;
-  margin-bottom: 20rpx;
-}
-
-.order-detail .detail-serve {
-  color: #a3a3a3;
-  border: 2rpx solid #a3a3a3;
-  border-radius: 15rpx;
-  padding: 8rpx 16rpx;
-  display: block;
-  text-align: center;
-}
-
-.order-summary, .order-amount {
-  padding: 20rpx 30rpx;
-}
-
-.order-summary {
-  color: #a3a3a3;
-}
-
-.order-summary .order-row, .order-amount .order-row {
-  display: flex;
-}
-
-.order-amount {
-  border-top: 2rpx solid #e5e5e5;
-}
-
-.order-summary .value, .order-amount .value {
-  flex-grow: 1;
-  text-align: right;
-}
-
-.blank-block {
-  height: 102rpx;
-}
-
-.toolbar {
-  border-top: 2rpx solid #e5e5e5;
-  padding: 20rpx 0;
-  text-align: right;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-.toolbar .order-opera, .toolbar .order-opera-primary {
-  display: inline-block;
-  color: #a3a3a3;
-  border: 2rpx solid #a3a3a3;
-  border-radius: 15rpx;
-  vertical-align: middle;
-  padding: 8rpx 16rpx;
-  margin-left: 20rpx;
-  line-height: 1;
-}
-
-.toolbar .order-opera-primary {
-  color: #C7162B;
-  border-color: #C7162B;
-  margin-right: 30rpx;
-}
-
-.tags {
-  margin-top: 20rpx;
-}
-
-.order-detail .detail-info .tags .gift-tag {
-  display: inline-block;
-  color: #C7162B;
-  font-size: 28rpx;
-  line-height: 32rpx;
-  border-radius: 8rpx;
-  border: 2rpx solid #C7162B;
-  padding: 4rpx 8rpx;
-}
+@import '/pages/order/detail.wxss';
