--- a/pages/coupon/index.wxss
+++ b/pages/coupon/index.wxss
@@ -1,21 +1,106 @@
 /* pages/home/coupon.wxss */
-	.hdj-coupon-list .hdj-coupon-item {width: 690rpx; height: 330rpx; margin: 10rpx 30rpx; background-color: #FFFFFF;}
-	.hdj-coupon-list .hdj-coupon-item .item-content {width: 690rpx; height: 218rpx; line-height: 100rpx; background-color: #FF638D;  padding: 20rpx 0;}
-	.hdj-coupon-list .hdj-coupon-item .item-footer {width: 690rpx; height: 66rpx; line-height: 66rpx; text-align: center; color: #666666;}
-	.hdj-coupon-list .hdj-coupon-item .item-content-l {color: #FFFFFF; font-size: 28rpx; width:280rpx; border-right: 4rpx dashed #FFFFFF;}
-	.hdj-coupon-list .hdj-coupon-item .item-content-l .text1 {font-size: 72rpx;}
-	.hdj-coupon-list .hdj-coupon-item .item-content-r {color: #FFFFFF; font-size: 24rpx; width:390rpx; line-height: 40rpx; padding-left:20rpx;}
-	.hdj-coupon-list .hdj-coupon-item .item-content-r .action {color: #FF638D;background-color: #FFFFFF; border-radius: 8rpx; margin-top:6rpx; padding: 6rpx 20rpx; width:140rpx; text-align:center;}
-
-
-  .item-content-r-detail {
-    min-height: 160rpx;
-  }
-
-  .item-content-r-action {
-    margin-left: 100rpx;
-  }
-
-  .mt-20 {
-    margin-top: 20rpx;
-  }
+.coupon-list-item,
+.coupon {
+  width: 694rpx;
+  margin: 40rpx 28rpx;
+  box-shadow: 0 2px 8px #ddd;
+  display: block;
+  background: url(http://m.hdjshop.cn/themes/hdj/images/coupon.png) no-repeat transparent;
+  background-size: 100% 100%;
+  min-height: 284rpx;
+}
+.coupon-list-item.disabled,
+.coupon.disabled {
+  background-image: url(http://m.hdjshop.cn/themes/hdj/images/coupon@disabled.png);
+}
+.coupon-list-item.disabled .coupon-item-btn,
+.coupon.disabled .coupon-item-btn {
+  color: #999999;
+}
+.coupon-list-item > view,
+.coupon > view {
+  display: flex;
+  padding: 30rpx 28rpx;
+}
+.coupon-list-item .coupon-item-info,
+.coupon .coupon-item-info {
+  padding-right: 10px;
+  font-size: 0.8rem;
+  flex-grow: 1;
+  border-right: 1px dashed #ffffff;
+}
+.coupon-list-item .coupon-item-info .coupon-item-price,
+.coupon .coupon-item-info .coupon-item-price {
+  text-align: center;
+  color: #ffffff;
+}
+.coupon-list-item .coupon-item-info .coupon-item-price text,
+.coupon .coupon-item-info .coupon-item-price text {
+  font-size: 1.8rem;
+}
+.coupon-list-item .coupon-item-info .coupon-item-condition,
+.coupon .coupon-item-info .coupon-item-condition {
+  font-size: 28rpx;
+  color: #ffffff;
+  text-align: center;
+}
+.coupon-list-item .coupon-item-name,
+.coupon .coupon-item-name {
+  margin-bottom: 0.5rem;
+  font-size: 0.8rem;
+  line-height: 1.2rem;
+  min-height: 2.4rem;
+}
+.coupon-list-item .coupon-item-reduce,
+.coupon .coupon-item-reduce {
+  color: #ffffff;
+  flex-grow: 1;
+  text-align: left;
+  font-size: 0.6rem;
+  margin-left: 10px;
+}
+.coupon-list-item .coupon-item-desc,
+.coupon .coupon-item-desc {
+  width: 340rpx;
+  height: 102rpx;
+  font-size: 24rpx;
+  line-height: 1.5;
+}
+.coupon-list-item .coupon-item-reduce text,
+.coupon .coupon-item-reduce text {
+  font-size: 1.2rem;
+}
+.coupon-list-item .coupon-item-period,
+.coupon .coupon-item-period {
+  color: #999999;
+  padding: 5px 10px;
+  font-size: 24rpx;
+  line-height: 2;
+}
+.coupon-list-item .coupon-item-btn,
+.coupon .coupon-item-btn {
+  text-align: center;
+  font-size: 24rpx;
+  line-height: 50rpx;
+  width: 140rpx;
+  background-color: #ffffff;
+  border-radius: 10rpx;
+  color: #b80333;
+  margin-top: 14rpx;
+  height: 50rpx;
+  display: block;
+}
+.coupon-list-item .my-coupon-item-btn,
+.coupon .my-coupon-item-btn {
+  background-color: #7eacf4;
+  border-radius: 5px;
+  color: #fff;
+}
+.coupon-list-item .my-coupon-item-btn p:first-child,
+.coupon .my-coupon-item-btn p:first-child {
+  width: 1rem;
+  padding: 1rem 10px;
+}
+.coupon-status-0 .my-coupon-item-btn {
+  background-color: #56a806;
+}
