--- a/pages/home/coupon.wxml
+++ b/pages/home/coupon.wxml
@@ -1,29 +1,47 @@
-		<wxs module="filters" src="../../assets/utils.wxs"></wxs>
-    <scroll-view scroll-x class="bg-white nav">
-			<view class="flex text-center">
-				<view class="cu-item flex-sub" :class="index == tabCur ? 'text-orange cur' : ''" v-for="(item,index) in types" :key="index" tap="tabSelect" :data-id="index">
-					{{ types[index] }}
-				</view>
-			</view>
-		</scroll-view>
-		
-		<view class="hdj-coupon-list menu-avatar">
-			<view class="hdj-coupon-item" wx:for="{{ coupons }}" wx:key="index" bindtap="gainCoupon" data-id="{{ item.id }}">
-				<view class="item-content flex">
-					<view class="item-content-l flex flex-column flex-items-center">
-						<view class="flex mt-20" wx:if="{{ item.type == '3' }}"><text class="text1">{{ item.decrement }}</text><view>元</view></view>
-            <view class="flex mt-20" wx:if="{{ item.type == '2' }}"><text class="text1">{{ item.decrement }}</text><view>元</view></view>
-            <view class="flex mt-20" wx:if="{{ item.type == '1' }}"><text class="text1">{{ item.discount/10 }}</text><view>折</view></view>
-						<view>满¥{{ filters.toFix(item.min_amount, 2) }}可用</view>
-					</view>
-					<view class="item-content-r">
-						<view class="item-content-r-detail">{{ item.name }} {{ item.remark }}</view>
-            <!-- 全场通用（一件包邮，拼团，闪电送门店自提及部分电商仓库商品不支持使用) -->
-						<view class="item-content-r-action"><view class="action">立即使用</view></view>
-					</view>
-				</view>
-				<view class="item-footer">
-					有效期 {{ item.begin_time_str }} 至 {{ item.end_time_str }}
-				</view>
-			</view>
-		</view>
+<!-- /pages/home/coupon.wxml -->
+<wxs module="filters" src="../../assets/utils.wxs"></wxs>
+
+<view class="coupon-list">
+  <block wx:for="{{coupons}}" wx:key="id" wx:for-item="coupon">
+    <template is="coupon" data="{{coupon}}"/>
+  </block>
+</view>
+
+
+<template name="coupon">
+<view class="coupon-list-item {{coupon.status != 0 ? 'disabled': ''}}">
+  <view>
+    <view class="coupon-item-info">
+      <view class="coupon-item-price">
+          <text>{{coupon.price}}</text>
+      </view>
+      <view class="coupon-item-condition">{{coupon.condition}}</view>
+    </view>
+    <view class="coupon-item-reduce">
+      <view class="coupon-item-desc">
+        {{coupon.desc}}
+      </view>
+      <navigator open-type="switchTab" url="/pages/index/index" class="coupon-item-btn" wx:if="{{coupon.status == 0}}">
+        立即使用
+      </navigator>
+
+      <view class="coupon-item-btn disabled" wx:if="{{coupon.status == 1}}">
+        已使用
+      </view>
+
+      <view class="coupon-item-btn disabled" wx:if="{{coupon.status == 2}}">
+        已过期
+      </view>
+    </view>
+  </view>
+  <view class="coupon-item-period">
+    <block wx:if="{{coupon.effect_end_time == '永久有效'}}">
+    有效期: 永久有效
+    </block>
+
+    <block wx:else>
+    有效期: {{coupon.effect_begin_time}} 至 {{coupon.effect_end_time}}
+    </block>
+  </view>
+</view>
+</template>
