--- a/app.wxss
+++ b/app.wxss
@@ -266,6 +266,7 @@ button::after {
 .hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-img,
 .hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-img {
   width: 262rpx;
+  height: 262rpx;
 }
 .hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-name,
 .hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-name,
@@ -554,4 +555,50 @@ button::after {
     border-radius: 5px;
     text-shadow: 0 0 1px #f1f1f1;
     box-shadow: 0 2px 6px #cecece;
+}
+
+@keyframes skeleton-ani {
+	0% {
+		left: 0
+	}
+ 
+	to {
+		left: 100%
+	}
+}
+
+.skt-loading .skeleton {
+	position: relative;
+	overflow: hidden;
+	border: none !important;
+	border-radius: 2px;
+	background-color: rgba(0, 0, 0, 0) !important;
+	background-image: none !important;
+	pointer-events: none;
+}
+ 
+.skt-loading .skeleton:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 9;
+	width: 100%;
+	height: 100%;
+	background-color: #ebf1f8;
+	display: block;
+	border-radius: 2px;
+}
+ 
+.skt-loading .skeleton:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	width: 30%;
+	height: 100%;
+	background: linear-gradient(90deg, hsla(0, 0%, 100%, 0) 0, hsla(0, 0%, 100%, .3) 50%, hsla(0, 0%, 100%, 0));
+	transform: skewX(-45deg);
+	z-index: 99;
+	animation: skeleton-ani 5s ease infinite;
+	display: block;
 }
