--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -64,6 +64,7 @@
   line-height: 1;
   color: #faddc0;
   flex-grow: 1;
+  text-align: left;
 }
 .hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc {
   margin-top: 16rpx;
@@ -127,4 +128,53 @@
 .hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-co-partner-link view:last-child {
   font-size: 20rpx;
   margin-top: 8rpx;
+}
+
+.hdj-member-qr-code {
+  display: block;
+  position: absolute;
+  text-align: center;
+  color: #fff;
+  right: 50rpx;
+  top: 40rpx;
+  padding: 2rpx 8rpx;
+  border: 2rpx solid #fff;
+}
+
+.hdj-member-qr-code icon {
+  font-size: 44rpx;
+}
+
+.hdj-board {
+  display: block;
+  width: 670rpx;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20rpx;
+  border-radius: 16rpx;
+  box-shadow: 0 6rpx 14rpx rgba(0,0,0,0.6);
+  overflow: visible;
+}
+
+.hdj-board .close {
+  position: absolute;
+  right: 10rpx;
+  top: 10rpx;
+  border: 2rpx solid #999;
+  color: #999;
+  padding: 16rpx;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 6rpx 14rpx rbga(0,0,0,0.6);  
+}
+
+.hdj-board .board {
+  text-align: center;
+}
+
+.hdj-board .board .qr-code {
+  width: 80%;
 }
